syntax = "proto3";

package paas;

option csharp_namespace = "Protocol";

service ControlPlaneProtocol {
  // Bi-directional stream: Agent sends messages and receives commands
  rpc Connect(stream AgentMessage) returns (stream ControlCommand);
}

// Commands sent from control plane to agent
message ControlCommand {
  oneof payload {
    ControlPing ping = 10;
  }
}

message ControlPing {}

// Message sent from agent to control plane
message AgentMessage {
  oneof payload {
    AgentHandshake handshake = 1;
    AgentShutdown shutdown = 2;
    AgentHeartbeat heartbeat = 3;
    AgentPong pong = 4;
  }
}

message AgentHandshake {
  string id = 1;
}
message AgentShutdown {
  string reason = 1;
}
message AgentHeartbeat {}
message AgentPong {}

